# project-1-aiml

./: .gitignore  README.md  api.py  crew.py  pyproject.toml  test.py
agents/: formatter.py  guard.py  researcher.py  validator.py
memory/: long_term_memory.db
memory/entity/: chroma.sqlite3
memory/short_term/: chroma.sqlite3
teachers/: .env.example  .gitignore  README.md  REDIS_SETUP.md  pyproject.toml  requirements.txt  test_env.py
teachers/src/memory/: long_term_memory.db
teachers/src/memory/entity/: chroma.sqlite3
teachers/src/memory/short_term/: chroma.sqlite3
teachers/src/teachers/: Untitled30.ipynb  app.py  checker.py  crew.py  fourth.py  lite_harness.py  main.py  redis_service.py  request_handler.py  simila.py  similar.py  stream_handler.py  tooler.py  toolers.py
teachers/src/teachers/allret/: 1_st_year_complete_ret.ipynb  2nd_year_complete_ret.ipynb  3rd_year_retipynb.ipynb  fourtyear_ret_.ipynb
teachers/src/teachers/config/: agents.yaml  tasks.yaml
teachers/src/teachers/finalfourret/: index.pkl
upload-ready/: README.md  cli.py  index_existing.py  requirements.txt  test.py  test_fix.py  test_search.py
upload-ready/config/: settings.py
upload-ready/src/: search_engine.py
upload-ready/src/encoders/: clip_encoder.py
upload-ready/src/processors/: pdf_processor.py  pdf_processor.py  
upload-ready/src/storage/: vector_store.py
