[project]
name = "gdg-fifnal-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[google-genai]>=1.9.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.19.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "litellm>=1.75.3",
    "pydantic[email]>=2.11.10",
    "sentence-transformers>=5.2.2",
]
